--- a/templates/admin/new_user.html
+++ b/templates/admin/new_user.html
@@ -5,10 +5,10 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "users.views.admin_list_users" %}"><i class="fa fa-lock"> </i> Administration</a>
+                <a href="{% url "users.views.admin_list_users" %}"><span class="glyphicon glyphicon-lock gi-0x"> Administration</a>
             </li>
             <li class="active">
                 New user
