--- a/templates/analyses/cases/_list_image.html
+++ b/templates/analyses/cases/_list_image.html
@@ -18,15 +18,15 @@
                         <td>{{ image.created_at }}</td>
                         <td>
                             <a class="btn btn-primary fancybox" data-tooltip="tooltip" title="Show preview" href="{% url "analyses.views.image" image.image_id %}">
-                                <i class="fa fa-photo"> </i>
+                                <span class="glyphicon glyphicon-picture"></span>
                             </a>
                             <a class="btn btn-info" data-tooltip="tooltip" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
-                                <i class="fa fa-file-text"> </i>
+                                <span class="glyphicon glyphicon-list-alt"></span>
                             </a>
                             {% if image.favorites.all %}
-                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn favorite btn-warning star{{image.id}}"> <i class="fa fa-star"> </i></a>
+                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn favorite btn-warning star{{image.id}}"> <span class="glyphicon glyphicon-star"></span></a>
                             {% else %}
-                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn btn-default favorite star{{image.id}}"> <i class="fa fa-star"> </i></a>
+                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn btn-default favorite star{{image.id}}"> <span class="glyphicon glyphicon-star"></span></a>
                             {% endif %}
                         </td>
                     </tr>
