--- a/templates/analyses/images/index.html
+++ b/templates/analyses/images/index.html
@@ -4,7 +4,7 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
             </li>
             <li class="active">
                 Images
@@ -85,7 +85,6 @@
                                 {% endif %}
                             {% else %}
                                 <div class="alert alert-info">
-                                    <span class="fa fa-info-circle"></span>
                                     <strong>Info!</strong>
                                     There are not any photos
                                 </div>
