--- a/templates/base_index.html
+++ b/templates/base_index.html
@@ -11,7 +11,6 @@
 
         {# Styles #}
         <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/fonts.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/index-style.css">
         {# JS #}
@@ -66,7 +65,7 @@
                 <div class="col-md-4">
                     <div class="features">
                         <div class="icon">
-                            <i class="icon-bg-dark icon-circled fa fa-photo icon-5x"></i>
+                            <i class="icon-bg-dark icon-circled glyphicon glyphicon-picture icon-5x"></i>
                         </div>
                         <div class="features_content">
                             <h3>Image analysis</h3>
@@ -79,7 +78,7 @@
                 <div class="col-md-4">
                     <div class="features">
                         <div class="icon">
-                            <i class="icon-bg-dark icon-circled fa fa-code icon-5x"></i>
+                            <i class="icon-bg-dark icon-circled glyphicon glyphicon-cutlery icon-5x"></i>
                         </div>
                         <div class="features_content">
                             <h3>Metadata extraction</h3>
@@ -92,7 +91,7 @@
                 <div class="col-md-4">
                     <div class="features">
                         <div class="icon">
-                            <i class="icon-bg-dark icon-circled fa fa-camera icon-5x"></i>
+                            <i class="icon-bg-dark icon-circled glyphicon glyphicon-camera icon-5x"></i>
                         </div>
                         <div class="features_content">
                             <h3>Automation</h3>
