--- a/templates/error.html
+++ b/templates/error.html
@@ -4,8 +4,12 @@
 
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
-            <li><i class="fa fa-home"></i><a href="/">Dashboard</a></li>
-            <li class="active">Error</li>
+            <li>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                Error
+            </li>
         </ol>
     </div>
 </div>
@@ -16,7 +20,7 @@
         </div>
         <div class="col-md-12">
             <div class="wdgt">
-                <div class="alert alert-warning" role="alert"><i class="fa fa-lg fa-info-circle"></i> {{error}}</div>
+                <div class="alert alert-warning" role="alert"><span class="glyphicon glyphicon-ban-circle"></span> {{error}}</div>
                 <a class="btn btn-default" href="javascript:history.back();">Back</a>
             </div>
         </div>
