--- a/templates/hashes/new.html
+++ b/templates/hashes/new.html
@@ -5,10 +5,10 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "hashes.views.list_hashes" %}"><i class="fa fa-book"> </i> Hashes</a>
+                <a href="{% url "hashes.views.list_hashes" %}"><span class="glyphicon glyphicon-book gi-0x"></span> </i> Hashes</a>
             </li>
             <li class="active">
                 New hash list
