--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
-            <li class="active"><i class="fa fa-home"></i> Dashboard</li>
+            <li class="active"><span class="glyphicon glyphicon-home gi-0x"></span> Dashboard</li>
         </ol>
     </div>
 </div>
