--- a/templates/users/password_change.html
+++ b/templates/users/password_change.html
@@ -5,10 +5,10 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "users.views.profile" %}"><i class="fa fa-user"></i> Profile</a>
+                <a href="{% url "users.views.profile" %}"><span class="glyphicon glyphicon-user gi-0x"></span> Profile</a>
             </li>
             <li class="active">
                 Change password
