--- a/templates/admin/dependencies.html
+++ b/templates/admin/dependencies.html
@@ -5,10 +5,10 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-lock"> </i> Administration</a>
+                <a href="{% url "analyses.views.list_cases" %}"><span class="glyphicon glyphicon-lock gi-0x"></span> Administration</a>
             </li>
             <li class="active">
                 Requirements
@@ -50,9 +50,9 @@
                                             <td>{{ dependency.name }}</td>
                                             <td>
                                                 {% if dependency.available %}
-                                                    <i class="fa fa-check-circle-o fa-lg text-success"></i>
+                                                    <span class="glyphicon glyphicon-ok-circle text-success"></span>
                                                 {% else %}
-                                                    <i class="fa fa-times-circle-o fa-lg text-danger"></i>
+                                                    <span class="glyphicon glyphicon-remove-circle text-danger"></span>
                                                 {% endif %}
                                             </td>
                                         </tr>
