--- a/templates/analyses/cases/edit.html
+++ b/templates/analyses/cases/edit.html
@@ -4,10 +4,10 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+                <span class="glyphicon glyphicon-home gi-0x"></span><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-book"> </i> Cases</a>
+                <a href="{% url "analyses.views.list_cases" %}"><span class="glyphicon glyphicon-book gi-0x"></span> Cases</a>
             </li>
             <li class="active">
                 Edit
